service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiheladeria-service
spec:
  selector:
    app: apiheladeria
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
